--- a/logica-js-projeto_inicial/calcularIMC/style.css
+++ b/logica-js-projeto_inicial/calcularIMC/style.css
@@ -27,8 +27,8 @@ body::before {
 }
 
 .container {
-    width: 1200px;
-    height: 600px;
+    width: 80%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,19 +40,17 @@ body::before {
     position: relative;
 }
 
+
 .container__conteudo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100%; 
-    width: 100%; 
+    position: absolute;
+    bottom: 0;
 }
 
 .container__informacoes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    flex: 1;
+    padding: 3rem;
 }
 
 .container__botao {
@@ -63,29 +61,93 @@ body::before {
     font-size: 24px;
     font-weight: 700;
     border: none;
-    margin-top: 16px;
+    margin-top: 2rem;
 }
 
 .container__texto {
-    margin: 16px 0 16px 0;
+    margin: 0px 0 0px 0;
 }
 
 .container__texto-azul {
     color: #1875E8;
 }
 
+.container__input {
+    width: 100%;
+    height: 72px;
+    border-radius: 16px;
+    background-color: #FFF;
+    border: none;
+    color: #1875E8;
+    padding: 2rem;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.container__botoes {
+    display: flex;
+    gap: 2em;
+}
+
 h1 {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 72px;
+    padding-bottom: 3rem;
 }
 
-h2,
 p,
 button {
     font-family: 'Inter', sans-serif;
 }
 
-h2 {
+.texto__paragrafo {
     font-size: 32px;
     font-weight: 400;
+}
+
+button:disabled {
+    background-color: gray;
+}
+
+@media screen and (max-width: 1250px) {
+
+    h1 {
+        font-size: 50px;
+    }
+
+    .container__botao {
+        font-size: 16px;
+    }
+
+
+    .texto__paragrafo {
+        font-size: 24px;
+    }
+
+    .container__imagem-pessoa {
+        display: none;
+    }
+
+    .container__conteudo {
+        display: block;
+        position: inherit;
+    }
+
+    .container__informacoes {
+        padding: 1rem
+    }
+
+    .campo {
+        margin-bottom: 20px
+    }
+
+    label {
+        display: block;
+        font-size: 18px;
+        font-weight: bold;
+        color: red;
+        margin-bottom: 8px;
+        font-family: 'Inter', sans-serif;
+    }
 }
