--- a/logica-js-projeto_inicial/calcularIMC/style.css
+++ b/logica-js-projeto_inicial/calcularIMC/style.css
@@ -146,7 +146,7 @@ button:disabled {
         display: block;
         font-size: 18px;
         font-weight: bold;
-        color: red;
+        color: whi;
         margin-bottom: 8px;
         font-family: 'Inter', sans-serif;
     }
